1) Added Scaffolding for SK Integration 2) Updated voice input with have English and Chinese option

--- a/MauiSpeechToTextSample/MainPage.xaml
+++ b/MauiSpeechToTextSample/MainPage.xaml
@@ -15,8 +15,13 @@
                 HorizontalOptions="Center" />
 
             <Button
-                Text="Listen"
-                Command="{Binding ListenCommand}"
+                Text="EN"
+                Command="{Binding ListenCommandEnglish}"
+                HorizontalOptions="Center" />
+
+            <Button
+                Text="CN"
+                Command="{Binding ListenCommandChinese}"
                 HorizontalOptions="Center" />
 
             <Button
